# airepublic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CI_CD_SECRETS.md  MIGRATION_PLAN.md  Makefile  README.md  SETUP.md  backup.sh  check-airepubliq-deployment.sh  docker-compose.yml  env.example  keep-running.sh  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt  setup-dev.sh  start.sh  start_dev.sh  start_services.sh
.github/workflows/: deploy.yml
backend/: Dockerfile  add_sample_datasets.py  app_server_new.py  backend.pid  create_training_results_table.py  create_user.py  create_v2_tables.py  dataset_loader.py  external_api_service.py  lora_script_generator.py  minion_templates.json  requirements.txt  restart_server.sh  spirit_bundles.json  spirit_pricing.json  spirit_purchase_seeder.sql  spirit_system_seeder.sql  spirits_registry.json  start_server.sh  stop_server.sh  subscription_plans.json  tools_registry.json
backend/app/: __init__.py
backend/cache/: redis_config.py
backend/database/: __init__.py  postgres_connection.py  session.py
backend/database_new/: __init__.py
backend/migrations/: add_class_name_to_minions.py  add_minion_profile_fields.py  add_rag_lora_fields_to_minions.py  add_spirits_enabled_column.py  add_unique_display_name_constraint.py  create_minion_classes_table.py
backend/model/: __init__.py  base.py  dataset.py  legacy.py  minion.py  payment.py  provider.py  reference_models.py  spirit_models.py  training.py  training_results.py  user.py
backend/repositories/: __init__.py  base.py  dataset_repository.py  minion_repository.py  payment_repository.py  provider_repository.py  training_repository.py  user_repository.py
backend/scripts/: cleanup_grafana_training.py  cleanup_test_minions.py  download_amigo_datasets.py  download_amigo_stage1_datasets.py  fix_duplicate_display_names.py  init_postgres_spirits.py  init_rbac.py  prepare_amigo_datasets.py  setup_postgres_spirits.py  verify_training.py
backend/seeders/: README.md  __init__.py  (+5 more)
docs/: AMIGO_DATASET_DOWNLOAD_STATUS.md  AMIGO_HARDWARE_ANALYSIS.md  AMIGO_IMPLEMENTATION_STATUS.md  AMIGO_MODEL_PLAN.md  AMIGO_REFINEMENT_PLAN.md  AMIGO_TRAINING_GUIDE.md  AMIGO_TRAINING_INTEGRATION.md  AUTH_DISABLE_RECORD.md  AWS_EC2_FREE_TIER_COMPATIBILITY.md  AWS_EC2_SETUP_GUIDE.md  BASE_MODEL_PROVIDER_IMPLEMENTATION_SUMMARY.md  CURRENT_ISSUES_SOLUTION.md  DATABASE_CORRECTION.md  DATABASE_ERD.md  DEPLOYMENT.md  EXPERIENCE_COLUMN_ANALYSIS.md  FILE_STRUCTURE.md  ICON_SYSTEM.md  MINION_DISPLAY_NAME_UNIQUENESS.md  MINION_GROUPED_TRAINING_STRATEGY.md  MINION_TOKEN_SYSTEM.md  NVIDIA_DRIVER_DIAGNOSIS.md  NVIDIA_DRIVER_FIX.md  NVIDIA_FINAL_RECOMMENDATION.md  NVIDIA_FIX_SIMPLE.md  PHASE3_USER_SCOPED_HYBRID_TRAINING_PLAN.md  POLLING_ANALYSIS.md  RAG_TRAINING_MODAL_STRATEGIES.md  README.md  RUN_EVERYTHING.md  Ranking_system.md  SETUP.md  SQLALCHEMY_MIGRATION_LOG.md  TOMORROW_TASKS.md  TRAINING_PROCESS.md  TRAINING_VERIFICATION_GUIDE.md  USER_SCOPED_MINION_API.md  XP_LEVELING_SYSTEM_ANALYSIS.md  codingrules.mdc  convo.md  (+7 more)
frontend/: .env.example  Dockerfile  frontend.pid  package-lock.json  package.json
frontend_old/: index.html  package-lock.json  package.json  vite.config.js
k8s/: backend-deployment.yaml  backend-secret.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  postgres-secret.yaml  redis-deployment.yaml
monitoring/: prometheus.yml
tests/: conftest.py
(+247 files in other folders)
